<resources>
    <string name="app_name">综合资讯</string>
    <string name="main_press_again">再按一次退出本应用</string>
    <string name="please_wait">请等待...</string>
    <string name="main_today_news">今日日报</string>
    <string name="main_home_page">主页</string>
    <string name="main_goods_page">干货</string>
    <string name="main_books_page">影视</string>
    <string name="main_me_page">我的</string>
    <string name="movie_fragment_title">豆瓣热映</string>
    <string name="douban_movie_top">豆瓣电影Top250</string>
    <string name="main_option_str">选项</string>
    <string name="main_night_model">夜间模式</string>
    <string name="main_about_str">关于</string>
    <string name="main_navigation_header_signature">生命不息,奋斗不止</string>
    <string name="network_error">当前网络不可用,请检查网络连接!</string>
    <string name="more_str">更多</string>
    <string name="switch_str">换一个</string>
    <string name="all_str">全部</string>
    <string name="selected_classify">选择分类</string>
    <string name="save_success">保存图片成功</string>
    <string name="save_failed">保存图片失败</string>
    <string name="grant_storage_permission">保存图片失败,请授予App的存储空间权限</string>
    <string name="permission_info">App未能获取全部需要的相关权限,部分功能不能正常使用.</string>
    <string name="hot_movie">热映榜</string>
    <string name="director_str">导演:&#160;</string>
    <string name="protagonist_str">主演:&#160;</string>
    <string name="type_str">类型:&#160;</string>
    <string name="rating_str">评分:&#160;</string>
    <string name="transition_movie_img">transition_movie_img</string>
    <string name="person_grade">&#160;人评分</string>
    <string name="show_data">上映日期:&#160;</string>
    <string name="production_country">制片国家/地区:&#160;</string>
    <string name="alias_str">另称</string>
    <string name="drama_intro">剧情简介</string>
    <string name="director_actor">导演 &amp; 演员</string>
    <string name="setting_str">设置</string>
    <string name="about_str">关于</string>
    <string name="statement_info">声明:此项目乃个人学习练手项目,商业用途请联系授权</string>
    <string name="photograph_str">拍照</string>
    <string name="from_album">从相册选择</string>
    <string name="cancel_str">取消</string>
    <string name="please_select_album">请选择图片</string>
    <string name="must_permission">必须授予权限才能使用该功能</string>
    <string name="save_user_photo_faild">保存用户头像失败,请稍后重试...</string>
    <string name="version_name">V 1.0</string>
    <string name="information_list">最新资讯集合\n\n功能：\n  · 知乎日报\n  · 新闻头条\n  · 微信精选\n  · 干货整理\n  · 电影资讯\n  · 精选书籍</string>
    <string name="about_author">关于作者</string>


    <string-array name="home_fragment_tab">
        <item>知乎日报</item>
        <item>热点新闻</item>
        <item>微信精选</item>
    </string-array>
    <string-array name="gank_io_fragment_tab">
        <item>每日推荐</item>
        <item>干货定制</item>
        <item>福利</item>
    </string-array>

</resources>
