<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:id="@+id/me_popup_window_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/me_popup_window_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/me_popup_window_photograph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/photograph_str"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C9C9CB" />

        <TextView
            android:id="@+id/me_popup_window_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/from_album"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#C9C9CB" />

        <TextView
            android:id="@+id/me_popup_window_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/cancel_str"
            android:textColor="@color/colorAccent"
            android:textSize="18sp" />

    </LinearLayout>
</layout>