<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:foreground="?android:attr/selectableItemBackground"
    android:background="@drawable/item_touch_bg"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="5dp"
    app:cardElevation="2dp"
    app:contentPadding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fragment_movie_item_icon"
            android:layout_width="100dp"
            android:layout_height="132dp"
            android:scaleType="fitXY"
            tools:src="@mipmap/ic_launcher" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.05" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:orientation="vertical">
            <!-- 电影名 -->
            <TextView
                android:id="@+id/fragment_movie_item_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="1"
                android:textColor="@color/colorContent"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:text="@string/hot_movie" />
            <!-- 导演 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bottom_line"
                    android:padding="3dp"
                    android:text="@string/director_str"
                    android:textColor="@color/colorContent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/fragment_movie_item_director"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/colorContent"
                    android:textSize="14sp"
                    tools:text="@string/app_name" />

            </LinearLayout>
            <!-- 主演 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dp"
                    android:text="@string/protagonist_str"
                    android:textColor="@color/colorContent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/fragment_movie_item_protagonist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textColor="@color/colorContent"
                    android:textSize="14sp"
                    tools:text="@string/app_name" />
            </LinearLayout>

            <!-- 类型 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/type_str"
                    android:textColor="@color/colorContent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/fragment_movie_item_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/colorContent"
                    android:textSize="14sp"
                    tools:text="@string/app_name" />
            </LinearLayout>

            <!-- 评分 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_str"
                    android:textColor="@color/colorContent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/fragment_movie_item_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:lines="1"
                    android:textColor="@color/colorContent"
                    android:textSize="14sp"
                    tools:text="@string/app_name" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</android.support.v7.widget.CardView>
