<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="movieDetail"
            type="cn.sn.zwcx.mvvm.bean.douban.MovieDetailBean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vertical_line"
            android:gravity="center_vertical"
            android:text="@string/alias_str"
            android:textColor="@color/colorContent"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:setAlias="@{movieDetail.aka}"
            android:textColor="@color/colorTitle"
            android:textSize="15sp"
            tools:text="支持格式化json字符串，你也可以选择树形展示更好的查看json对象中的内容，还支持json字符串直接生成Java bean类" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vertical_line"
            android:gravity="center_vertical"
            android:text="@string/drama_intro"
            android:textColor="@color/colorContent"
            android:textSize="17sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@{movieDetail.summary}"
            android:textColor="@color/colorTitle"
            android:textSize="16sp"
            tools:text="支持格式化json字符串，你也可以选择树形展示更好的查看json对象中的内容，还支持json字符串直接生成Java bean类" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_vertical_line"
            android:gravity="center_vertical"
            android:text="@string/director_actor"
            android:textColor="@color/colorContent"
            android:textSize="17sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorSubtitle"
            android:layout_margin="15dp"/>
    </LinearLayout>
</layout>