<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="cn.sn.zwcx.mvvm.activitys.AboutActivity">
    <data>

    </data>

<android.support.design.widget.CoordinatorLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@drawable/about_bg">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="260dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:statusBarScrim="@android:color/transparent"
            app:titleEnabled="false">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/about_head_bg"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.7"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/version_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:drawableTop="@mipmap/ic_launcher"
                android:drawablePadding="8dp"
                android:gravity="center"/>
            
            <android.support.v7.widget.Toolbar
                android:id="@+id/activity_about_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
                app:navigationIcon="@drawable/back"
                app:title="@string/main_about_str"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.ToolbarPopupOverlay"/>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        app:behavior_overlapTop="40dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                android:elevation="5dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:layout_marginStart="20dp"
                    android:textSize="16sp"
                    android:text="@string/information_list"/>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/about_author"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <android.support.v7.widget.CardView
                android:id="@+id/activity_about_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/item_touch_bg"
                android:focusable="true"
                android:clickable="true"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp"
                android:elevation="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="10dp">
                    <com.facebook.drawee.view.SimpleDraweeView
                        android:id="@+id/activity_about_sdv"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        tools:src="@mipmap/ic_launcher"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginStart="10dp"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="Yang Huan"
                            android:textColor="@color/colorContent" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="2dp"
                            android:text="Email:435025168@qq.com"
                            android:textColor="@color/colorContent"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="1dp"
                            android:text="https://github.com/androidyanghuan"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:text="@string/statement_info"
                android:textColor="@color/colorContent"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
</layout>